--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nodemon",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,26 +21,29 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.3",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.4.1",
+    "@nestjs/common": "8.4.7",
+    "@nestjs/core": "8.4.7",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^10.4.1",
-    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/microservices": "8.4.7",
+    "@nestjs/platform-express": "8.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.0.1",
+    "helmet": "^5.1.0",
     "joi": "^17.13.3",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "nodemon": "^2.0.16",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "tango-microservicio": "file:"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.4.1",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
+    "@nestjs/cli": "8.2.8",
+    "@nestjs/schematics": "9.2.0",
+    "@nestjs/testing": "8.4.7",
+    "@types/express": "4.17.13",
+    "@types/jest": "28.1.2",
+    "@types/node": "18.0.0",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
