--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tango-microservicio",
-  "version": "0.0.1",
+  "name": "urbano-ms-tango",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -23,6 +23,7 @@
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "8.4.7",
     "@nestjs/core": "8.4.7",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "8.4.7",
     "@nestjs/platform-express": "8.4.7",
@@ -34,7 +35,8 @@
     "nodemon": "^2.0.16",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "tango-microservicio": "file:"
+    "tango-microservicio": "file:",
+    "urbano-ms-tango": "file:"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.8",
